# kravex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HUMANS.md  LICENSE  LICENSE-EE  LICENSE-MIT  PLAN-daemon-mcp-autotune.md  README.md  docker-compose.yml  geo.json  kvx.toml  kvx_file.toml  kvx_file_to_esdb.toml  noaa.json  pmc.json  todo.md
crates/kvx/: Cargo.toml  README.md
crates/kvx/benches/: file_source_bench.rs  joiner_bench.rs
crates/kvx/src/: README.md  app_config.rs  backends.rs  casts.rs  collectors.rs  common.rs  composers.rs  config.rs  controllers.rs  foreman.rs  lib.rs  manifolds.rs  progress.rs  regulators.rs  supervisors.rs  throttlers.rs  transforms.rs  workers.rs
crates/kvx/src/app_config/: sink_config.rs  source_config.rs
crates/kvx/src/backends/: README.md  common_config.rs  config.rs  elasticsearch.rs  elasticsearch_sink.rs  elasticsearch_source.rs  file.rs  file_sink.rs  file_source.rs  in_mem.rs  in_mem_sink.rs  in_mem_source.rs  mod.rs  opensearch.rs  sink.rs  source.rs
crates/kvx/src/casts/: README.md  mod.rs  ndjson_split.rs  ndjson_to_bulk.rs  passthrough.rs  pit_to_bulk.rs  pit_to_json.rs  scroll_to_bulk.rs
crates/kvx/src/collectors/: json_array.rs  mod.rs  ndjson.rs
crates/kvx/src/composers/: backend.rs  json_array.rs  ndjson.rs
crates/kvx/src/controllers/: pid_bytes_to_ms.rs
crates/kvx/src/manifolds/: README.md  backend.rs  json_array.rs  mod.rs  ndjson.rs
crates/kvx/src/regulators/: README.md  config.rs  cpu_pressure.rs  manometer.rs  mod.rs  pressure_gauge.rs  signals.rs  static_regulator.rs  throughput_seeker.rs
crates/kvx/src/supervisors/: config.rs  workers.rs
crates/kvx/src/throttlers/: config_controller.rs  pid_bytes_to_doc_count.rs  pid_bytes_to_ms.rs  (+1 more)
(+54 files in other folders)
